--- a/index.qmd
+++ b/index.qmd
@@ -3,15 +3,36 @@ title: "Intermediate shiny: drawing the owl"
 engine: knitr
 format: html
 ---
+
+# <https://bit.ly/shinyowl>
+
+![](bit.ly_45BDX9k.png){width=400}
+
 # Learning Objectives
 
 This workshop aims to get you over the hill to faster, better looking, and dynamic Shiny Apps.
 
-1. Dashboards with Quarto
-1. Demystifying Reactive Programming
-1. Making it modular
+1. **Customize** dashboards with `{bslib}` and `{thematic}`
+1. **Explain** fundamentals of Reactive Programming
+1. **Utilize** Shiny modules in your projects
+
+## Agenda (roughly)
+
+|Section|Begin|End|
+|-------|----|---|
+|Welcome/Get Started|9:00|9:10|
+|Dashboards|9:10|9:55|
+|Break|9:55|10|
+|Reactivity|10|10:55|
+|Break|10:55|11|
+|Modules/Wrap-up|11|12|
 
 # Posit.cloud project 
 
 1. Please create a free user account at posit.cloud 
 1. Invite yourself to the workspace [here](https://posit.cloud/spaces/525494/join?access_code=N0vloDrDMCVvlXLIhXHISNdrWjHe4SOlhPm_9abK)
+1. 
+
+# Reminders
+
+This workshop 
